fix: APPS-3591 homepage overlap (#278)
* fix: nest ALL rules

* fix: overlap

* fix: original apps-3531

* fix: restore other rules that seem ok for now

* fix: edit nested rules to work while nested

---------

--- a/assets/styles/slug-pages.scss
+++ b/assets/styles/slug-pages.scss
@@ -23,10 +23,13 @@
         aspect-ratio: 343/204;
       }
     }
-  }
 
-  :deep(.one-column .lightbox .media-item) {
-    height: auto;
+    &.lightbox {
+      :deep(.media-item) {
+        height: auto;
+      }
+    }
+
   }
 
   // check for a one-column layout with a lightbox or figure before rendering blue background
